navbar and footer import removed. 3dca files moved to subfolder.

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,10 @@ footer {
   color: #fff;
 }
 
+.fab:hover {
+  color: #ffeb3b;
+}
+
 /* @media */
 @media (max-width: 500px), (max-height: 500px) {
   .carousel-caption {
