--- a/comp/css/3dca.css
+++ b/comp/css/3dca.css
@@ -113,6 +113,7 @@ footer {
   left: 120px;
   top: 2px;
   -webkit-appearance: none;
+  appearance: none;
   width: 120px;
   height: 15px;
   border-radius: 5px;
